# motoman_mys450f_support

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: joint_names_mys450f.yaml
launch/: load_mys450f.launch  test_mys450f.launch
meshes/mys450f/collision/: base_link.stl  link_1_s.stl  link_2_l.stl  link_3_u.stl
meshes/mys450f/visual/: base_link.dae  base_link.stl  link_1_s.dae  link_1_s.stl  link_2_l.stl  link_3_u.dae  link_3_u.stl  logo.stl
rviz/: display.rviz
urdf/: mys450f.xacro  mys450f_macro.xacro
